[tool.poetry]
name = "relative-world"
version = "2.0.3"
description = ""
authors = ["Tyler Evans <tyler@poorlythoughtout.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
parameterized = "^0.9.0"
ruff = "^0.9.6"
sphinx = "^8.2.0"
black = "^25.1.0"
pytest-asyncio = "^0.25.3"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
